--- a/Projekt_Wizualizacja/KolKomOrg.resx
+++ b/Projekt_Wizualizacja/KolKomOrg.resx
@@ -117,4 +117,225 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_PN.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/4QC6RXhpZgAATU0AKgAAAAgAAgESAAMAAAABAAEAAIdpAAQAAAAB
+        AAAAJgAAAAAAAZKGAAcAAAB6AAAAOAAAAABVTklDT0RFAABDAFIARQBBAFQATwBSADoAIABnAGQALQBq
+        AHAAZQBnACAAdgAxAC4AMAAgACgAdQBzAGkAbgBnACAASQBKAEcAIABKAFAARQBHACAAdgA4ADAAKQAs
+        ACAAcQB1AGEAbABpAHQAeQAgAD0AIAA5ADAACv/bAEMAAgEBAgEBAgICAgICAgIDBQMDAwMDBgQEAwUH
+        BgcHBwYHBwgJCwkICAoIBwcKDQoKCwwMDAwHCQ4PDQwOCwwMDP/bAEMBAgICAwMDBgMDBgwIBwgMDAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDP/AABEIAGEAYQMBIgAC
+        EQEDEQH/xAAfAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgv/xAC1EAACAQMDAgQDBQUEBAAAAX0B
+        AgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVG
+        R0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3
+        uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+fr/xAAfAQADAQEBAQEBAQEBAAAA
+        AAAAAQIDBAUGBwgJCgv/xAC1EQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGh
+        scEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1
+        dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri
+        4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/APxf/bo/bp+I/wDwUW/aN1r4ofFDWv7V8QatiG3t
+        oQ0dhotmrMYrKziLN5VvHvbC5LMzvI7PJJJI3j9Ffsd/wb0/8G9PwX/4Ky/sX+J/iN8RvE/xQ0XW9F8a
+        3XhuCDw3qNjbWr28VjYXCuyz2czmQvdSAkOBgL8oIJIB+ONFf0/f8QVP7LP/AEP37QH/AIPNI/8AlZR/
+        xBU/ss/9D9+0B/4PNI/+VlAH8wNFf0/f8QVP7LP/AEP37QH/AIPNI/8AlZR/xBU/ss/9D9+0B/4PNI/+
+        VlAH8wNFf0/f8QVP7LP/AEP37QH/AIPNI/8AlZR/xBU/ss/9D9+0B/4PNI/+VlAH8wNFf0/f8QVP7LP/
+        AEP37QH/AIPNI/8AlZR/xBU/ss/9D9+0B/4PNI/+VlAH8wNdf8A/j54y/Zc+Mfh/4gfD/wAQ6h4V8Y+F
+        roXmmanZMBLbvgqwIYFXjdGZHjcMkiO6OrKzKf2v/wCCzH/Br/8AAL/gnb/wTZ+JHxi8E+LvjBqnibwf
+        /Zn2O11vVdOnsJftOqWdnJ5iQ2MUhxHcORtkXDBScjIP4Q0Afr//AMRq37U3/Qg/AD/wR6v/APLOivyA
+        ooAK/p+/4Mqf+UWXj7/squo/+mjR6/mBr+n7/gyp/wCUWXj7/squo/8Apo0egD9fqKKKACvz3/4LD/8A
+        BxX8Kf8Agkt4hj8FvouqfEr4rXNnHqC+HdOuks7XToXkQKb68ZX8hnj814444pnPlrvWJJY5G/Qiv4zf
+        +DhDxxqHxB/4LOftA32pSJJcW/iQaYhRdoENpbQ2sIx6iKFAT3IJ70AfvV/wSg/4OnfhT/wUe+Mmn/DP
+        xR4R1T4Q/EDxBcyw6DBc6mmq6Rq+2NGSEXgjhaO6kPnBYnhCN5SqsrSSpFX6kV/Cb+xn441D4Zftg/Cn
+        xJpLxx6p4f8AGOkalZvIm9VmhvYZEJU8EBlHHev7sqACiiigD4A/4Ojf+UFHxz/7gH/qQaZX8gVf1+/8
+        HR3/ACgo+Of/AHAP/Ug0yv5AqACiiigAr+n7/gyp/wCUWXj7/squo/8Apo0ev5ga/p+/4MqT/wAasvH3
+        /ZVdR/8ATRo9AH6/UV+e/wDwcV/8Fh9R/wCCS37KOiyeC4tMufir8Sb2bTvDo1CCSW3023gRWvNQKBfL
+        kaLzbeNIndcvdI+JEikjb+dXxx/wcIftnfEHX31K/wD2gvG1vcSIqFNMW20y3AXgYhtoo4wfUhcnuTQB
+        /ZlX8Wv/AAXa/wCUwn7RH/Y53n8xR/w/Z/bC/wCjiPib/wCDQ/4V82fFL4peIvjb8RNY8W+LdYvvEHiX
+        xBcteajqN5J5k95M33ndu5NAGn+zn/ycJ4D/AOxi0/8A9KY6/vKr+AvR9XuvD+rWt/ZTSWt5YzJcQTRn
+        DxSIQysD6ggH8K+qv+H7P7YX/RxHxM/8Gh/woA/tKor+MPw5/wAF+f2yvCuuWuoWv7Qnj+W4tH8xEvJ4
+        ryBj/twzI8bj2ZSPav3V/wCDZP8A4LseLv8Agpxp3jD4Y/GC60u9+KXguyj1qw1WzsfsjeItMMiwzvNF
+        FGLeOa3mkgUlDGJFuowsQMMsjAHtH/B0d/ygo+Of/cA/9SDTK/kCr+v3/g6O/wCUFHxz/wC4B/6kGmV/
+        IFQAUUUUAFf0/f8ABlT/AMosvH3/AGVXUf8A00aPX8wNf0/f8GVP/KLLx9/2VXUf/TRo9AHb/wDB05/w
+        Sg8Zf8FIP2UvCHif4Z2F5r/xA+EN9d3MGhRXKR/2vpt4kIvBCjLmS6RrW1eNPMTdGtwqrJK0SV/Mp43/
+        AGM/jB8MtffSfEnwp+JXh/VI0WR7PUvDF7aXCqwypKSRBgCOQcc1/dlRQB/Br/wzn8Qv+hD8Zf8Agkuf
+        /iK5XV9Iu9A1Oeyv7W4sby1cxzQXERjliYdVZWAII9DX9+lfxa/8F2v+Uwn7RH/Y53n8xQB8nwxNcSrH
+        GrSSSEKqqMliegArsP8AhnP4hf8AQh+Mv/BJc/8AxFH7Of8AycJ4D/7GLT//AEpjr+8qgD+EPw3+yb8V
+        PGWu2ul6P8M/iBq2p3ziK3tLPw7eTz3DnoqIsZZj7AV/QJ/waTf8EdfiP+yDrPjf47fFrw5rngbWvE2k
+        Dwv4a0DUv9HvTZPPHcXd1d2rR+ZCWltrVIQ7o+EuC8W14XP7cUUAfAH/AAdHf8oKPjn/ANwD/wBSDTK/
+        kCr+v3/g6O/5QUfHP/uAf+pBplfyBUAFFFFABX9P3/BlT/yiy8ff9lV1H/00aPX8wNf0/f8ABlT/AMos
+        vH3/AGVXUf8A00aPQB+v1FFFABX8Yf8AwX68N33hX/gsn+0Ja6jay2lxL4qkvESQYLQzxRzwv9HikRx7
+        MK/s8r8l/wDgux/wbJW//BTf4vXXxg+GHi/S/BfxRvrK3tNWsNbilbR/ETQ+VDFO88QeW1lS2VkJWKZZ
+        BDbrsiPmSuAfzV/sm+G7/wAZ/tUfDPR9LtZb7VNW8V6XZ2dtEMyXE0l5EiIo9WYgD3Nf3eV+I/8AwR0/
+        4NKLz9kD9o/w78Wvjr428O+J9a8Dal/aWgeG/C6zyacbqIRva3txdzxwyMYpfMcQJCo3xQOZmXfCf24o
+        AKKKKAPgD/g6O/5QUfHP/uAf+pBplfyBV/X7/wAHR3/KCj45/wDcA/8AUg0yv5AqACiiigAr93v+DX//
+        AILMfs2f8E7v2BfF3gn4xfEj/hD/ABNqnxAvNbtbP/hH9U1DzbOTTtNhSXzLW2ljGZLeZdpYMNmSMEE/
+        ih8fPgH4y/Zc+MniH4f/ABA8P6h4W8Y+Fbs2Wp6ZeKPMt5AAwIZSUkjdGV0kQskiOjozKyseQoA/r9/4
+        ijf2E/8Aouf/AJZniD/5Bo/4ijv2E/8AouX/AJZniD/5Br+QKigD+v3/AIijf2E/+i5/+WZ4g/8AkGj/
+        AIijf2E/+i5f+WZ4g/8AkGv5AqKAP6/f+Io39hP/AKLl/wCWZ4g/+QaP+Io39hP/AKLl/wCWZ4g/+Qa/
+        kCooA/r9/wCIo39hP/ouX/lmeIP/AJBo/wCIo39hP/ouX/lmeIP/AJBr+QKigD+j7/gvV/wXq/ZP/bR/
+        4JPfFb4Z/DP4rf8ACS+NvEn9kf2bpv8AwjOsWf2nyNYsbmX97cWkcS7YYZG+ZxnbgZJAP84NFaHhTwpq
+        njzxTpuh6Hpuoa1rWtXUVjp+n2Nu9xdX1xK4SKGKJAWkkd2VVRQSxIABJoAz6K+//wDiFx/bs/6Ib/5e
+        fh//AOTqKAPoD/g9W/5SmeAf+yVad/6d9Yr8gKKKACiiigAooooAKKKKACiiigAr7+/4Nc/+U63wN/7j
+        /wD6j2p0UUAf1/UUUUAf/9k=
+</value>
+  </data>
+  <data name="btn_MN.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/4QC6RXhpZgAATU0AKgAAAAgAAgESAAMAAAABAAEAAIdpAAQAAAAB
+        AAAAJgAAAAAAAZKGAAcAAAB6AAAAOAAAAABVTklDT0RFAABDAFIARQBBAFQATwBSADoAIABnAGQALQBq
+        AHAAZQBnACAAdgAxAC4AMAAgACgAdQBzAGkAbgBnACAASQBKAEcAIABKAFAARQBHACAAdgA4ADAAKQAs
+        ACAAcQB1AGEAbABpAHQAeQAgAD0AIAA5ADAACv/bAEMAAgEBAgEBAgICAgICAgIDBQMDAwMDBgQEAwUH
+        BgcHBwYHBwgJCwkICAoIBwcKDQoKCwwMDAwHCQ4PDQwOCwwMDP/bAEMBAgICAwMDBgMDBgwIBwgMDAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDP/AABEIAGAAZAMBIgAC
+        EQEDEQH/xAAfAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgv/xAC1EAACAQMDAgQDBQUEBAAAAX0B
+        AgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVG
+        R0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3
+        uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+fr/xAAfAQADAQEBAQEBAQEBAAAA
+        AAAAAQIDBAUGBwgJCgv/xAC1EQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGh
+        scEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1
+        dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri
+        4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/APxi/bq/bt+JH/BRb9onWPiZ8UNcOra7qZ8q2tYA
+        0en6LaKSYrKzhJPk28e44GSzMzySM8rySN47+dIDg1+2X/Bt/wD8EIvgL/wVB/Ye8VePvilb+LpvEGj+
+        Obvw/btpesfY4RaxWGnTqCmxstvuZct6YHagD8Tc0Zr+rT/iEA/Y7/58fiR/4Ux/+NUf8QgH7Hf/AD4/
+        Er/wpT/8aoA/lLzRmv6tP+IQD9jv/nx+JH/hSn/43R/xCAfsd/8APj8SP/ClP/xugD+UvNGa/q0/4hAP
+        2O/+fH4lf+FKf/jVB/4NAP2O/wDnx+JH/hSn/wCN0Afyl5ozX9Wf/EH/APsd/wDPl8Sv/ClP/wAapf8A
+        iEA/Y7/58fiV/wCFKf8A41QB/KXS49jX9WZ/4NAP2Ox/y4/Ej/wpj/8AGq/mk/bw+EOjfs9/tvfGXwD4
+        dW5j8P8Agfxzrfh/TFuZPNmW1tL+eCEO+BubZGuWwMmgD7J/Ya/4Ok/2mv2Ff2d9J+Gemr4D8faH4fZo
+        9JuvGNle32oababVCWSTQ3kG63i2ny1kDsitsVhGkcaFfm7RQAV/T9/wZVf8os/H3/ZVNQ/9NGj1/MDX
+        9P3/AAZVf8os/H3/AGVTUP8A00aPQB+v1FFFABRRRQAUUUUAFFFFABX8Qf8AwVh/5SmftLf9lV8Uf+ne
+        6r+3yv4g/wDgrD/ylM/aW/7Kr4o/9O91QB8/0UUUAFf0/f8ABlV/yiz8ff8AZVNQ/wDTRo9fzA1/T7/w
+        ZV8/8EsfH3/ZVNR/9NGj0Afr/uozzXxf/wAF4P8Agprd/wDBKr9gDVfHmi6bcaj4w8SahH4V8Mvtja2s
+        NRuILiZbq4DHmOKK2mcKFbfIsaEKjtIn8tHjX/gsb+1h488WajrV7+0f8a7e81S4e6mi07xhfabZxs5y
+        RFbW8kcMKZPyxxoqKOAAKAP7Z6K/iD/4ew/tTf8ARy3x+/8ADhat/wDJFH/D2H9qb/o5b4/f+HC1b/5I
+        oA/t8or+IP8A4ew/tTf9HLfH7/w4Wrf/ACRR/wAPYf2pv+jlvj9/4cLVv/kigD+3yjNfxB/8PYf2pv8A
+        o5X4/f8AhwtW/wDkiv0G/wCDfL/g4S+NHgH9s/wX8J/i54y8ZfFbwJ8T9Zg8PWr6xejUtU0TU72eGC2u
+        VurgmeS38wqkkLS7ESR5I1LrskAP6dq/iD/4Kw/8pTP2lv8Asqvij/073Vf2+V/EH/wVh/5SmftLf9lV
+        8Uf+ne6oA+f6KKKACv6fv+DKr/lFl4+/7KpqH/po0ev5ga/p+/4Mqf8AlFn4+/7KrqH/AKaNHoA+sP8A
+        gu//AMEybv8A4Kp/sAat4D0XUrjTfGHhrUI/FfhhQ8a2+oajbwXEKWtwX6RyxXMyBwyGORo3JZUaN/5Z
+        /Gn/AARy/aw8B+KtS0S+/Zv+NdxeaVcPbTSad4OvtStHdTgmK5t45IJkyOHidlYchiOa/tmooA/iD/4d
+        O/tTf9G0/tAf+G81f/5Ho/4dO/tTf9G0/tAf+G81f/5Hr+3yigD+IP8A4dO/tTf9G0/tAf8AhvNX/wDk
+        ej/h07+1N/0bT+0B/wCG81f/AOR6/t8ooA/iDH/BJ79qYH/k2n9oD/w3mr//ACPX6Df8G+f/AAb1/Gjx
+        7+2n4L+LHxd8G+MvhT4D+F+sweIbZNYsv7N1TW9Tspop7a2W2uAJkgMmx5Jmi2ukbxowdt8f9O1FABX8
+        Qf8AwVh/5SmftLf9lV8Uf+ne6r+3yv4g/wDgrD/ylM/aW/7Kr4o/9O91QB8/0UUUAFf0/f8ABlV/yiz8
+        ff8AZVNQ/wDTRo9fzA1/T9/wZVH/AI1Z+Pv+yqah/wCmjR6AP1+ooooAKN3NFRrFiQttwTgZA68k/wBa
+        AJKKKKACiiigAr+IP/grD/ylM/aW/wCyq+KP/TvdV/b5X8Qf/BWL/lKZ+0t/2VXxR/6d7qgD5/ooooAU
+        DBr9r/8Ag2//AOC8HwF/4JffsP8AirwD8UrjxdF4g1jxzd+IIBpekfbITayWGnwKS+9cNvtpflx0x61+
+        WX7cv7CvxI/4J1/tD618M/ihojaVrmmfvba6g3SafrVqxYRXtnKVXzreTacNhWVldHVJI3jXxygD+rT/
+        AIjAf2O/+fz4lf8AhM//AG2j/iMB/Y7/AOfz4lf+Ez/9tr+UuigD+rT/AIjAf2O/+fz4lf8AhM//AG2j
+        /iMB/Y7/AOfz4lf+Ez/9tr+UuigD+rT/AIjAf2O/+fz4lf8AhM//AG2j/iMB/Y7/AOfz4lf+Ez/9tr+U
+        uigD+rT/AIjAf2O/+fz4lf8AhM//AG2j/iMB/Y7/AOfz4lf+Ez/9tr+UuigD+rM/8HgP7HZH/H58Sv8A
+        wmf/ALbX80n7eHxh0f8AaD/bh+M3j7w61w/h/wAceOdb8QaY1xF5UzWt3fzzxF1/hYpIuVzweK8noHWg
+        Aor9Iv2H/wDg1t/ab/bn/Z50n4maXL4B8AaF4hZpdItfGN/e2OoalaYUx3qQwWk+23lyfLMhVnVd6qY3
+        jkcoA//Z
+</value>
+  </data>
+  <data name="btn_PU.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/4QC6RXhpZgAATU0AKgAAAAgAAgESAAMAAAABAAEAAIdpAAQAAAAB
+        AAAAJgAAAAAAAZKGAAcAAAB6AAAAOAAAAABVTklDT0RFAABDAFIARQBBAFQATwBSADoAIABnAGQALQBq
+        AHAAZQBnACAAdgAxAC4AMAAgACgAdQBzAGkAbgBnACAASQBKAEcAIABKAFAARQBHACAAdgA4ADAAKQAs
+        ACAAcQB1AGEAbABpAHQAeQAgAD0AIAA5ADAACv/bAEMAAgEBAgEBAgICAgICAgIDBQMDAwMDBgQEAwUH
+        BgcHBwYHBwgJCwkICAoIBwcKDQoKCwwMDAwHCQ4PDQwOCwwMDP/bAEMBAgICAwMDBgMDBgwIBwgMDAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDP/AABEIAGEAYQMBIgAC
+        EQEDEQH/xAAfAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgv/xAC1EAACAQMDAgQDBQUEBAAAAX0B
+        AgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVG
+        R0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3
+        uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+fr/xAAfAQADAQEBAQEBAQEBAAAA
+        AAAAAQIDBAUGBwgJCgv/xAC1EQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGh
+        scEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1
+        dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri
+        4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/APxf/bo/bp+I/wDwUW/aN1r4ofFDWv7V8QatiG3t
+        oQ0dhotmrMYrKziLN5VvHvbC5LMzvI7PJJJI3j9Ffsd/wb0/8G9PwX/4Ky/sX+J/iN8RvE/xQ0XW9F8a
+        3XhuCDw3qNjbWr28VjYXCuyz2czmQvdSAkOBgL8oIJIB+ONFf0/f8QVP7LP/AEP37QH/AIPNI/8AlZR/
+        xBU/ss/9D9+0B/4PNI/+VlAH8wNFf0/f8QVP7LP/AEP37QH/AIPNI/8AlZR/xBU/ss/9D9+0B/4PNI/+
+        VlAH8wNFf0/f8QVP7LP/AEP37QH/AIPNI/8AlZR/xBU/ss/9D9+0B/4PNI/+VlAH8wNFf0/f8QVP7LP/
+        AEP37QH/AIPNI/8AlZR/xBU/ss/9D9+0B/4PNI/+VlAH8wNdf8A/j54y/Zc+Mfh/4gfD/wAQ6h4V8Y+F
+        roXmmanZMBLbvgqwIYFXjdGZHjcMkiO6OrKzKf2v/wCCzH/Br/8AAL/gnb/wTZ+JHxi8E+LvjBqnibwf
+        /Zn2O11vVdOnsJftOqWdnJ5iQ2MUhxHcORtkXDBScjIP4Q0Afr//AMRq37U3/Qg/AD/wR6v/APLOivyA
+        ooAK/p+/4Mqf+UWXj7/squo/+mjR6/mBr+n7/gyp/wCUWXj7/squo/8Apo0egD9fqKKKACvz3/4LD/8A
+        BxX8Kf8Agkt4hj8FvouqfEr4rXNnHqC+HdOuks7XToXkQKb68ZX8hnj814444pnPlrvWJJY5G/Qiv4zf
+        +DhDxxqHxB/4LOftA32pSJJcW/iQaYhRdoENpbQ2sIx6iKFAT3IJ70AfvV/wSg/4OnfhT/wUe+Mmn/DP
+        xR4R1T4Q/EDxBcyw6DBc6mmq6Rq+2NGSEXgjhaO6kPnBYnhCN5SqsrSSpFX6kV/Cb+xn441D4Zftg/Cn
+        xJpLxx6p4f8AGOkalZvIm9VmhvYZEJU8EBlHHev7sqACiiigD4A/4Ojf+UFHxz/7gH/qQaZX8gVf1+/8
+        HR3/ACgo+Of/AHAP/Ug0yv5AqACiiigAr+n7/gyp/wCUWXj7/squo/8Apo0ev5ga/p+/4MqT/wAasvH3
+        /ZVdR/8ATRo9AH6/UV+e/wDwcV/8Fh9R/wCCS37KOiyeC4tMufir8Sb2bTvDo1CCSW3023gRWvNQKBfL
+        kaLzbeNIndcvdI+JEikjb+dXxx/wcIftnfEHX31K/wD2gvG1vcSIqFNMW20y3AXgYhtoo4wfUhcnuTQB
+        /ZlX8Wv/AAXa/wCUwn7RH/Y53n8xR/w/Z/bC/wCjiPib/wCDQ/4V82fFL4peIvjb8RNY8W+LdYvvEHiX
+        xBcteajqN5J5k95M33ndu5NAGn+zn/ycJ4D/AOxi0/8A9KY6/vKr+AvR9XuvD+rWt/ZTSWt5YzJcQTRn
+        DxSIQysD6ggH8K+qv+H7P7YX/RxHxM/8Gh/woA/tKor+MPw5/wAF+f2yvCuuWuoWv7Qnj+W4tH8xEvJ4
+        ryBj/twzI8bj2ZSPav3V/wCDZP8A4LseLv8Agpxp3jD4Y/GC60u9+KXguyj1qw1WzsfsjeItMMiwzvNF
+        FGLeOa3mkgUlDGJFuowsQMMsjAHtH/B0d/ygo+Of/cA/9SDTK/kCr+v3/g6O/wCUFHxz/wC4B/6kGmV/
+        IFQAUUUUAFf0/f8ABlT/AMosvH3/AGVXUf8A00aPX8wNf0/f8GVP/KLLx9/2VXUf/TRo9AHb/wDB05/w
+        Sg8Zf8FIP2UvCHif4Z2F5r/xA+EN9d3MGhRXKR/2vpt4kIvBCjLmS6RrW1eNPMTdGtwqrJK0SV/Mp43/
+        AGM/jB8MtffSfEnwp+JXh/VI0WR7PUvDF7aXCqwypKSRBgCOQcc1/dlRQB/Br/wzn8Qv+hD8Zf8Agkuf
+        /iK5XV9Iu9A1Oeyv7W4sby1cxzQXERjliYdVZWAII9DX9+lfxa/8F2v+Uwn7RH/Y53n8xQB8nwxNcSrH
+        GrSSSEKqqMliegArsP8AhnP4hf8AQh+Mv/BJc/8AxFH7Of8AycJ4D/7GLT//AEpjr+8qgD+EPw3+yb8V
+        PGWu2ul6P8M/iBq2p3ziK3tLPw7eTz3DnoqIsZZj7AV/QJ/waTf8EdfiP+yDrPjf47fFrw5rngbWvE2k
+        Dwv4a0DUv9HvTZPPHcXd1d2rR+ZCWltrVIQ7o+EuC8W14XP7cUUAfAH/AAdHf8oKPjn/ANwD/wBSDTK/
+        kCr+v3/g6O/5QUfHP/uAf+pBplfyBUAFFFFABX9P3/BlT/yiy8ff9lV1H/00aPX8wNf0/f8ABlT/AMos
+        vH3/AGVXUf8A00aPQB+v1FFFABX8Yf8AwX68N33hX/gsn+0Ja6jay2lxL4qkvESQYLQzxRzwv9HikRx7
+        MK/s8r8l/wDgux/wbJW//BTf4vXXxg+GHi/S/BfxRvrK3tNWsNbilbR/ETQ+VDFO88QeW1lS2VkJWKZZ
+        BDbrsiPmSuAfzV/sm+G7/wAZ/tUfDPR9LtZb7VNW8V6XZ2dtEMyXE0l5EiIo9WYgD3Nf3eV+I/8AwR0/
+        4NKLz9kD9o/w78Wvjr428O+J9a8Dal/aWgeG/C6zyacbqIRva3txdzxwyMYpfMcQJCo3xQOZmXfCf24o
+        AKKKKAPgD/g6O/5QUfHP/uAf+pBplfyBV/X7/wAHR3/KCj45/wDcA/8AUg0yv5AqACiiigAr93v+DX//
+        AILMfs2f8E7v2BfF3gn4xfEj/hD/ABNqnxAvNbtbP/hH9U1DzbOTTtNhSXzLW2ljGZLeZdpYMNmSMEE/
+        ih8fPgH4y/Zc+MniH4f/ABA8P6h4W8Y+Fbs2Wp6ZeKPMt5AAwIZSUkjdGV0kQskiOjozKyseQoA/r9/4
+        ijf2E/8Aouf/AJZniD/5Bo/4ijv2E/8AouX/AJZniD/5Br+QKigD+v3/AIijf2E/+i5/+WZ4g/8AkGj/
+        AIijf2E/+i5f+WZ4g/8AkGv5AqKAP6/f+Io39hP/AKLl/wCWZ4g/+QaP+Io39hP/AKLl/wCWZ4g/+Qa/
+        kCooA/r9/wCIo39hP/ouX/lmeIP/AJBo/wCIo39hP/ouX/lmeIP/AJBr+QKigD+j7/gvV/wXq/ZP/bR/
+        4JPfFb4Z/DP4rf8ACS+NvEn9kf2bpv8AwjOsWf2nyNYsbmX97cWkcS7YYZG+ZxnbgZJAP84NFaHhTwpq
+        njzxTpuh6Hpuoa1rWtXUVjp+n2Nu9xdX1xK4SKGKJAWkkd2VVRQSxIABJoAz6K+//wDiFx/bs/6Ib/5e
+        fh//AOTqKAPoD/g9W/5SmeAf+yVad/6d9Yr8gKKKACiiigAooooAKKKKACiiigAr7+/4Nc/+U63wN/7j
+        /wD6j2p0UUAf1/UUUUAf/9k=
+</value>
+  </data>
+  <data name="btn_MU.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/4QC6RXhpZgAATU0AKgAAAAgAAgESAAMAAAABAAEAAIdpAAQAAAAB
+        AAAAJgAAAAAAAZKGAAcAAAB6AAAAOAAAAABVTklDT0RFAABDAFIARQBBAFQATwBSADoAIABnAGQALQBq
+        AHAAZQBnACAAdgAxAC4AMAAgACgAdQBzAGkAbgBnACAASQBKAEcAIABKAFAARQBHACAAdgA4ADAAKQAs
+        ACAAcQB1AGEAbABpAHQAeQAgAD0AIAA5ADAACv/bAEMAAgEBAgEBAgICAgICAgIDBQMDAwMDBgQEAwUH
+        BgcHBwYHBwgJCwkICAoIBwcKDQoKCwwMDAwHCQ4PDQwOCwwMDP/bAEMBAgICAwMDBgMDBgwIBwgMDAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDP/AABEIAGAAZAMBIgAC
+        EQEDEQH/xAAfAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgv/xAC1EAACAQMDAgQDBQUEBAAAAX0B
+        AgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVG
+        R0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3
+        uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+fr/xAAfAQADAQEBAQEBAQEBAAAA
+        AAAAAQIDBAUGBwgJCgv/xAC1EQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGh
+        scEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1
+        dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri
+        4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/APxi/bq/bt+JH/BRb9onWPiZ8UNcOra7qZ8q2tYA
+        0en6LaKSYrKzhJPk28e44GSzMzySM8rySN47+dIDg1+2X/Bt/wD8EIvgL/wVB/Ye8VePvilb+LpvEGj+
+        Obvw/btpesfY4RaxWGnTqCmxstvuZct6YHagD8Tc0Zr+rT/iEA/Y7/58fiR/4Ux/+NUf8QgH7Hf/AD4/
+        Er/wpT/8aoA/lLzRmv6tP+IQD9jv/nx+JH/hSn/43R/xCAfsd/8APj8SP/ClP/xugD+UvNGa/q0/4hAP
+        2O/+fH4lf+FKf/jVB/4NAP2O/wDnx+JH/hSn/wCN0Afyl5ozX9Wf/EH/APsd/wDPl8Sv/ClP/wAapf8A
+        iEA/Y7/58fiV/wCFKf8A41QB/KXS49jX9WZ/4NAP2Ox/y4/Ej/wpj/8AGq/mk/bw+EOjfs9/tvfGXwD4
+        dW5j8P8Agfxzrfh/TFuZPNmW1tL+eCEO+BubZGuWwMmgD7J/Ya/4Ok/2mv2Ff2d9J+Gemr4D8faH4fZo
+        9JuvGNle32oababVCWSTQ3kG63i2ny1kDsitsVhGkcaFfm7RQAV/T9/wZVf8os/H3/ZVNQ/9NGj1/MDX
+        9P3/AAZVf8os/H3/AGVTUP8A00aPQB+v1FFFABRRRQAUUUUAFFFFABX8Qf8AwVh/5SmftLf9lV8Uf+ne
+        6r+3yv4g/wDgrD/ylM/aW/7Kr4o/9O91QB8/0UUUAFf0/f8ABlV/yiz8ff8AZVNQ/wDTRo9fzA1/T7/w
+        ZV8/8EsfH3/ZVNR/9NGj0Afr/uozzXxf/wAF4P8Agprd/wDBKr9gDVfHmi6bcaj4w8SahH4V8Mvtja2s
+        NRuILiZbq4DHmOKK2mcKFbfIsaEKjtIn8tHjX/gsb+1h488WajrV7+0f8a7e81S4e6mi07xhfabZxs5y
+        RFbW8kcMKZPyxxoqKOAAKAP7Z6K/iD/4ew/tTf8ARy3x+/8ADhat/wDJFH/D2H9qb/o5b4/f+HC1b/5I
+        oA/t8or+IP8A4ew/tTf9HLfH7/w4Wrf/ACRR/wAPYf2pv+jlvj9/4cLVv/kigD+3yjNfxB/8PYf2pv8A
+        o5X4/f8AhwtW/wDkiv0G/wCDfL/g4S+NHgH9s/wX8J/i54y8ZfFbwJ8T9Zg8PWr6xejUtU0TU72eGC2u
+        VurgmeS38wqkkLS7ESR5I1LrskAP6dq/iD/4Kw/8pTP2lv8Asqvij/073Vf2+V/EH/wVh/5SmftLf9lV
+        8Uf+ne6oA+f6KKKACv6fv+DKr/lFl4+/7KpqH/po0ev5ga/p+/4Mqf8AlFn4+/7KrqH/AKaNHoA+sP8A
+        gu//AMEybv8A4Kp/sAat4D0XUrjTfGHhrUI/FfhhQ8a2+oajbwXEKWtwX6RyxXMyBwyGORo3JZUaN/5Z
+        /Gn/AARy/aw8B+KtS0S+/Zv+NdxeaVcPbTSad4OvtStHdTgmK5t45IJkyOHidlYchiOa/tmooA/iD/4d
+        O/tTf9G0/tAf+G81f/5Ho/4dO/tTf9G0/tAf+G81f/5Hr+3yigD+IP8A4dO/tTf9G0/tAf8AhvNX/wDk
+        ej/h07+1N/0bT+0B/wCG81f/AOR6/t8ooA/iDH/BJ79qYH/k2n9oD/w3mr//ACPX6Df8G+f/AAb1/Gjx
+        7+2n4L+LHxd8G+MvhT4D+F+sweIbZNYsv7N1TW9Tspop7a2W2uAJkgMmx5Jmi2ukbxowdt8f9O1FABX8
+        Qf8AwVh/5SmftLf9lV8Uf+ne6r+3yv4g/wDgrD/ylM/aW/7Kr4o/9O91QB8/0UUUAFf0/f8ABlV/yiz8
+        ff8AZVNQ/wDTRo9fzA1/T9/wZVH/AI1Z+Pv+yqah/wCmjR6AP1+ooooAKN3NFRrFiQttwTgZA68k/wBa
+        AJKKKKACiiigAr+IP/grD/ylM/aW/wCyq+KP/TvdV/b5X8Qf/BWL/lKZ+0t/2VXxR/6d7qgD5/ooooAU
+        DBr9r/8Ag2//AOC8HwF/4JffsP8AirwD8UrjxdF4g1jxzd+IIBpekfbITayWGnwKS+9cNvtpflx0x61+
+        WX7cv7CvxI/4J1/tD618M/ihojaVrmmfvba6g3SafrVqxYRXtnKVXzreTacNhWVldHVJI3jXxygD+rT/
+        AIjAf2O/+fz4lf8AhM//AG2j/iMB/Y7/AOfz4lf+Ez/9tr+UuigD+rT/AIjAf2O/+fz4lf8AhM//AG2j
+        /iMB/Y7/AOfz4lf+Ez/9tr+UuigD+rT/AIjAf2O/+fz4lf8AhM//AG2j/iMB/Y7/AOfz4lf+Ez/9tr+U
+        uigD+rT/AIjAf2O/+fz4lf8AhM//AG2j/iMB/Y7/AOfz4lf+Ez/9tr+UuigD+rM/8HgP7HZH/H58Sv8A
+        wmf/ALbX80n7eHxh0f8AaD/bh+M3j7w61w/h/wAceOdb8QaY1xF5UzWt3fzzxF1/hYpIuVzweK8noHWg
+        Aor9Iv2H/wDg1t/ab/bn/Z50n4maXL4B8AaF4hZpdItfGN/e2OoalaYUx3qQwWk+23lyfLMhVnVd6qY3
+        jkcoA//Z
+</value>
+  </data>
 </root>
