--- a/Projekt_Wizualizacja/Properties/Resources.resx
+++ b/Projekt_Wizualizacja/Properties/Resources.resx
@@ -124,11 +124,14 @@
   <data name="niebieskietlo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\niebieskietlo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="a1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\a1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="thJ7T8ZGJ0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\thJ7T8ZGJ0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="image_flagaENG" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\image_flagaENG.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Przycisk_wstecz" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Przycisk_wstecz.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="koniec" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\koniec.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,11 +157,14 @@
   <data name="karta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\karta.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="thJ7T8ZGJ0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\thJ7T8ZGJ0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="image_flagaPOL" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image_flagaPOL.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\minus.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="a1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\a1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="wstecz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wstecz.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,13 +178,13 @@
   <data name="koniec1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\koniec1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="image_flagaPOL" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\image_flagaPOL.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ZKM_Gdynia" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ZKM_Gdynia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="a" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\a.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ZKM_Gdynia" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ZKM_Gdynia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Przycisk_ZAKOŃCZ" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Przycisk_ZAKOŃCZ.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
